--- a/sigee/src/main/resources/static/css/Evento.css
+++ b/sigee/src/main/resources/static/css/Evento.css
@@ -466,3 +466,29 @@ li a {
     font-size: 12px;
    margin-top: 10px;
 }
+
+.error {
+    background-color: #f8d7da;
+    color: #842029;
+    font-size: 25px;
+    border-radius: 6px;
+    text-align: center;
+    margin: 3px 20% 10px 20%;
+}
+
+.info {
+    background-color: #d1e7dd;
+    color: #0f5132;
+    font-size: 25px;
+    border-radius: 6px;
+    text-align: center;
+    margin: 3px 20% 10px 20%;
+}
+
+.ocultar {
+    display: none;
+}
+ 
+.mostrar {
+    display: block;
+}
