--- a/sigee/src/main/resources/templates/Usuario.html
+++ b/sigee/src/main/resources/templates/Usuario.html
@@ -5,129 +5,171 @@ To change this template file, choose Tools | Templates
 and open the template in the editor.
 -->
 <html>
-    <head>
-        <title>Usuario</title>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link th:href="@{/css/font-awesome.min.css}" rel="stylesheet">
-        <link th:href="@{/css/Evento.css}" rel="stylesheet">
-        <link rel="stylesheet" th:href="@{/Bootstrap/css/bootstrap.min.css}" />
-        <link rel="stylesheet" href="../static/Bootstrap/css/bootstrap.min.css" type="text/css"/>
-        <link rel="stylesheet" href="../static/css/Evento.css" type="text/css">
-    </head>
-    <body>
-        <div class="container col-8 row">    
-            <form class="row needs-validation"
-                  
-                  method="POST"
-                  th:action="@{/addInfoUsuario}"
-                  th:object="${InfoUsuarioForm}">
-                  <input type="hidden" th:field="*{id}" th:value="*{id}" />
-                <div class="col-4">
-                    <label for="Editbox1" class="form-label"  
-                           style="display:block;width:100%;z-index:3;top: 5px;">Nombre y Apellidos:</label>
-                    <input type="text" class="form-control" id="Editbox1"
-                           name="nombApellidos"
-                           onkeypress="return soloLetras(event)"
-                           th:field="*{nombApellidos}"
-                           th:value="*{nombApellidos}"
-                           style="display:block;width: 100%;height:26px;z-index:4;"
-                           spellcheck="false" required>
-                </div>
-                <div class="col-4">
-                    <label for="Editbox1" class="form-label"  
-                           style="display:block;width:100%;z-index:3;top: 5px;">Correo:</label>
-                    <input type="text" class="form-control" id="Editbox1"
-                           name="correo"
-                           th:field="*{correo}"
-                           th:value="*{correo}"
-                           style="display:block;width: 100%;height:26px;z-index:4;"
-                           spellcheck="false" required>
-                </div>
-                <div class="col-4">
-                    <label for="Editbox1" class="form-label"  
-                           style="display:block;width:100%;z-index:3;top: 5px;">CI:</label>
-                    <input type="number" class="form-control" id="Editbox1"
-                           name="ci"
-                            th:field="*{ci}"
-                           th:value="*{ci}"
-                           style="display:block;width: 100%;height:26px;z-index:4;"
-                           spellcheck="false" required>
-                </div>
-                <div class="col-md-4">
-                    <label for="validationCustom02" class="form-label" 
-                           style="display:block;width:100%;z-index:5;top: 5px;">Teléfono:</label>
-                        <input type="number" 
-                           class="form-control" 
-                           id="Editbox2"
-                           min="1"
-                           max="6"
-                           name="telefono"
-                           th:field="*{telefono}"
-                           th:value="*{telefono}"
-                           style="display:block;width: 100%;height:26px;z-index:6;" 
-                           spellcheck="false" 
-                           required>
-                </div>
-                
-                <div class="col-md-4">
-                    <label for="validationCustom02" class="form-label" 
-                           style="display:block;width:100%;z-index:5;top: 5px;">Teléfono:</label>
-                        <input type="number" 
-                           class="form-control" 
-                           id="Editbox2"
-                           min="1"
-                           max="6"
-                           name="telefono"
-                           th:field="*{telefono}"
-                           th:value="*{telefono}"
-                           style="display:block;width: 100%;height:26px;z-index:6;" 
-                           spellcheck="false" 
-                           required>
-                </div>
-                <div class="col-md-4">
-                    <label for="validationCustomUsername" class="form-label" 
-                           style="display:block;width:100%;z-index:5;top: 5px;">Rol:</label>
-                    <select type="text" 
-                            class="form-select" 
-                            id="Editbox3"
-                            name="rol"
-                            th:field="*{rol}"
-                            th:value="*{rol}"
-                            style="display:block;width: 103%;height:30px;z-index:8;"
-                            spellcheck="false" 
-                            required>
-                        <option value="" text="'Seleccione'"></option>
-                        <option value="Investigativo">administrador</option>
-                        <option value="Formacion">organizador</option>
-                        <option value="Variado">usuario</option>
-                    </select>
-                    <label for="validationCustomUsername" class="form-label" style="display:block;width:100%;z-index:5;top: 5px;">Tipo:</label>
-                    <select type="text" 
-                            class="form-select" 
-                            id="Editbox3"
-                            name="tipo"
-                            th:field="*{tipo}"
-                            th:value="*{tipo}"
-                            style="display:block;width: 103%;height:30px;z-index:8;"
-                            spellcheck="false" 
-                            required>
-                        <option value="" text="'Seleccione'"></option>
-                        <option value="Investigativo">Investigativo</option>
-                        <option value="Formacion">Formacion</option>
-                        <option value="Variado">Variado</option>
-                    </select>
-                </div>
-                
-            </form>    
+  <head>
+    <title>Usuario</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link th:href="@{/css/font-awesome.min.css}" rel="stylesheet" />
+    <link th:href="@{/css/Evento.css}" rel="stylesheet" />
+    <link rel="stylesheet" th:href="@{/Bootstrap/css/bootstrap.min.css}" />
+    <link
+      rel="stylesheet"
+      href="../static/Bootstrap/css/bootstrap.min.css"
+      type="text/css"
+    />
+    <link rel="stylesheet" href="../static/css/Evento.css" type="text/css" />
+  </head>
+  <body th:fragment="content">
+    <div class="container col-8 row">
+      <form
+        class="row needs-validation"
+        method="POST"
+        th:action="@{/InfoUsuario}"
+        th:object="${InfoUsuarioForm}"
+      >
+        <input type="hidden" th:field="*{id}" th:value="*{id}" />
+        <div class="col-4">
+          <label
+            for="Editbox1"
+            class="form-label"
+            style="display: block; width: 100%; z-index: 3; top: 5px"
+            >Nombre y Apellidos:</label
+          >
+          <input
+            type="text"
+            class="form-control"
+            id="Editbox1"
+            name="nombApell"
+            onkeypress="return soloLetras(event)"
+            th:field="*{nombApell}"
+            th:value="*{nombApell}"
+            style="display: block; width: 100%; height: 26px; z-index: 4"
+            spellcheck="false"
+            required
+          />
+        </div>
+        <div class="col-4">
+          <label
+            for="Editbox1"
+            class="form-label"
+            style="display: block; width: 100%; z-index: 3; top: 5px"
+            >Correo:</label
+          >
+          <input
+            type="text"
+            class="form-control"
+            id="Editbox1"
+            name="correo"
+            th:field="*{correo}"
+            th:value="*{correo}"
+            style="display: block; width: 100%; height: 26px; z-index: 4"
+            spellcheck="false"
+            required
+          />
+        </div>
+        <div class="col-4">
+          <label
+            for="Editbox1"
+            class="form-label"
+            style="display: block; width: 100%; z-index: 3; top: 5px"
+            >CI:</label
+          >
+          <input
+            type="number"
+            class="form-control"
+            id="Editbox1"
+            name="ci"
+            th:field="*{ci}"
+            th:value="*{ci}"
+            style="display: block; width: 100%; height: 26px; z-index: 4"
+            spellcheck="false"
+            required
+          />
+        </div>
+        <div class="col-md-4">
+          <label
+            for="validationCustom02"
+            class="form-label"
+            style="display: block; width: 100%; z-index: 5; top: 5px"
+            >Teléfono:</label
+          >
+          <input
+            type="number"
+            class="form-control"
+            id="Editbox2"
+            min-length="6"
+            max-lenght="6"
+            name="telefono"
+            th:field="*{telefono}"
+            th:value="*{telefono}"
+            style="display: block; width: 100%; height: 26px; z-index: 6"
+            spellcheck="false"
+            required
+          />
         </div>
 
-        <script th:src="@{/js/jquery-1.12.4.min.js}"></script>
-        <script th:src="@{/js/searchindex.js}"></script>
-        <script th:src="@{/js/wb.sitesearch.min.js}"></script>
-        <script th:src="@{/Bootstrap/js/bootstrap.min.js}"></script>
-        
+        <div class="col-md-4">
+          <label
+            for="validationCustom02"
+            class="form-label"
+            style="display: block; width: 100%; z-index: 5; top: 5px"
+            >Facultad</label
+          >
+          <input
+            type="number"
+            class="form-control"
+            id="Editbox2"
+            min="1"
+            max="6"
+            name="facultad"
+            th:field="*{facultad}"
+            th:value="*{facultad}"
+            style="display: block; width: 100%; height: 26px; z-index: 6"
+            spellcheck="false"
+            required
+          />
+        </div>
+        <div class="col-md-4">
+          <label
+            for="validationCustomUsername"
+            class="form-label"
+            style="display: block; width: 100%; z-index: 5; top: 5px"
+            >Rol:</label
+          >
+          <select
+            type="text"
+            class="form-select"
+            id="Editbox3"
+            name="rol"
+            th:field="*{rol}"
+            th:value="*{rol}"
+            style="display: block; width: 103%; height: 30px; z-index: 8"
+            spellcheck="false"
+            required
+          >
+            <option value="" text="'Seleccione'"></option>
+            <option value="Investigativo">administrador</option>
+            <option value="Formacion">organizador</option>
+            <option value="Variado">usuario</option>
+          </select>
+        </div>
+        <div class="col-md-4 my-3">
+          <button
+            type="submit"
+            class="btn btn-outline-primary"
+            value="InfoUsuario"
+          >
+            Guardar
+          </button>
+        </div>
+      </form>
+    </div>
 
-
-    </body>
+      <script th:src="@{/js/sigee.js}"></script>
+      <script th:src="@{/js/app.js}"></script>
+    <script th:src="@{/js/jquery-1.12.4.min.js}"></script>
+    <script th:src="@{/js/searchindex.js}"></script>
+    <script th:src="@{/js/wb.sitesearch.min.js}"></script>
+    <script th:src="@{/Bootstrap/js/bootstrap.min.js}"></script>
+  </body>
 </html>
