--- a/sigee/src/main/resources/templates/login.html
+++ b/sigee/src/main/resources/templates/login.html
@@ -1,22 +1,65 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org">
-    <head>
-        <title>Please Log In</title>
-    </head>
-    <body>
+  <head>
+    <title>Log In</title>
+    <link th:href="@{/css/sigee.css}" rel="stylesheet" />
+  </head>
+  <body>
+    <!--<div>
         <h1>Please Log In</h1>
-        <div th:if="${param.error}">
-            Invalid username and password.</div>
-        <div th:if="${param.logout}">
-            You have been logged out.</div>
+        <div th:if="${param.error}">Invalid username and password.</div>
+        <div th:if="${param.logout}">You have been logged out.</div>
         <form th:action="@{/login}" method="post">
-            <div>
-                <input type="text" name="username" placeholder="Usuario"/>
-            </div>
-            <div>
-                <input type="password" name="password" placeholder="Contraseña"/>
-            </div>
-            <input type="submit" value="Log in" />
+          <div>
+            <input type="text" name="username" placeholder="Usuario" />
+          </div>
+          <div>
+            <input type="password" name="password" placeholder="Contraseña" />
+          </div>
+          <input type="submit" value="Log in" />
         </form>
-    </body>
+    </div>-->
+
+    <div class="wrapper fadeInDown">
+      <div id="formContent">
+        <!-- Tabs Titles -->
+        <h2 class="active">Inicio de Sesión</h2>
+
+        <!-- Icon 
+        <div class="fadeIn first">
+          <img src="http://danielzawadzki.com/codepen/01/icon.svg" id="icon" alt="User Icon" />
+        </div>-->
+
+        <div th:if="${param.error}">Usuario o Contraseña incorrectos</div>
+        <div th:if="${param.logout}">Ha iniciado sesión</div>
+
+        <!-- Login Form -->
+        <form th:action="@{/login}" method="post">
+          <input
+            type="text"
+            id="login"
+            class="fadeIn second"
+            name="username"
+            placeholder="Usuario"
+          />
+          <input
+            type="password"
+            id="password"
+            class="fadeIn third"
+            name="password"
+            placeholder="Contraseña"
+          />
+          <input type="submit" class="fadeIn fourth" value="Entrar" />
+
+        </form>
+
+        <!-- Remind Passowrd 
+        <div id="formFooter">
+          <a class="underlineHover" href="#">Forgot Password?</a>
+        </div>-->
+      </div>
+    </div>
+
+    <script th:src="@{/js/sigee.js}"></script>
+  </body>
 </html>
